apps/manyfold/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: manyfold
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  type: ClusterIP
